--- a/Repast.settings
+++ b/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\C\git\uebung3\Uebung3.rs</string>
+    <string>C:\Users\asche\git\uebung3\Uebung3.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
